# rescue_hash

./: Cargo.toml
benches/: rescue_bls12_381.rs  rescue_bn256.rs  rescue_hash.rs
src/: constants.rs  generator.rs  lib.rs
src/bls12_381/: mod.rs
src/bn256/: mod.rs
